--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,58 +1,217 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Career Guidance - Login</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>College Finder • Prototype</title>
   <style>
-    body {
-      font-family: Arial;
-      background: #f1f1f1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+    /* ---------- Base + Theme ---------- */
+    :root{
+      --bg1:#eef6ff;
+      --bg2:#ffffff;
+      --primary:#2563eb;
+      --ink:#0f172a;
+      --muted:#475569;
+      --glass: rgba(255,255,255,0.6);
+      --shadow: 0 10px 30px rgba(2,6,23,0.12);
+      --radius: 18px;
     }
-    .login-box {
-      background: white;
-      padding: 20px 40px;
-      border-radius: 10px;
-      box-shadow: 0px 4px 12px rgba(0,0,0,0.2);
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0; font-family: ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial;
+      color:var(--ink);
+      background:#f8fafc;
+      display:flex; flex-direction:column; min-height:100%;
+      position:relative; overflow:hidden;
     }
-    input {
-      display: block;
-      margin: 15px 0;
-      padding: 10px;
-      width: 100%;
+
+    /* ---------- Animated Gradient Background ---------- */
+    body::before{
+      content:"";
+      position:fixed; inset:0;
+      background: radial-gradient(circle at 20% 30%, #dbeafe 0%, transparent 40%),
+                  radial-gradient(circle at 80% 20%, #e9d5ff 0%, transparent 40%),
+                  radial-gradient(circle at 50% 80%, #bae6fd 0%, transparent 40%);
+      animation: movebg 15s ease-in-out infinite alternate;
+      z-index:-1;
     }
-    button {
-      background: #007bff;
-      color: white;
-      border: none;
-      padding: 10px;
-      width: 100%;
-      border-radius: 5px;
+    @keyframes movebg {
+      0% { transform:scale(1) translate(0,0); }
+      100% { transform:scale(1.2) translate(-40px, -30px); }
     }
+
+    .app{
+      max-width:960px; margin:0 auto; width:100%; height:100dvh;
+      display:grid; grid-template-rows:auto 1fr auto; gap:0;
+    }
+
+    /* ---------- Top: Search Bar ---------- */
+    .topbar{
+      position:sticky; top:0; z-index:20;
+      backdrop-filter: blur(10px);
+      background:linear-gradient(to bottom, rgba(255,255,255,0.9), rgba(255,255,255,0.7));
+      border-bottom:1px solid rgba(15,23,42,0.06);
+    }
+    .topwrap{padding:16px; display:flex; gap:10px; align-items:center}
+    .search{
+      flex:1; display:flex; gap:10px; align-items:center;
+      background:var(--glass);
+      border:1px solid rgba(2,6,23,0.08);
+      border-radius:999px; padding:10px 14px; box-shadow: var(--shadow);
+    }
+    .search input{
+      border:none; outline:none; background:transparent; width:100%;
+      font-size:16px; color:var(--ink);
+    }
+    .chip{
+      padding:6px 10px; border-radius:999px; font-size:12px;
+      background:#eef2ff; color:#3730a3; border:1px solid #c7d2fe;
+    }
+
+    /* ---------- List ---------- */
+    .list{
+      overflow:auto; padding:18px; display:grid; gap:18px;
+      grid-template-columns: repeat(auto-fill,minmax(260px,1fr));
+    }
+    .card{
+      position:relative; border-radius: var(--radius); overflow:hidden;
+      background:linear-gradient(180deg, #ffffff, #f8fafc);
+      border:1px solid rgba(2,6,23,0.06);
+      box-shadow: var(--shadow);
+      transition: transform .18s ease, box-shadow .18s ease;
+      cursor:pointer;
+      text-decoration:none; color:inherit;
+    }
+    .card:hover{ transform: translateY(-4px); box-shadow: 0 16px 40px rgba(2,6,23,0.16); }
+    .thumb{
+      height:140px; width:100%; object-fit:cover; display:block;
+      background:#e2e8f0;
+    }
+    .content{ padding:14px 14px 16px 14px; display:flex; justify-content:space-between; align-items:center; gap:8px }
+    .title{ font-weight:700; font-size:16px; line-height:1.2 }
+    .meta-row{ display:flex; align-items:center; gap:8px; color:var(--muted); font-size:12px; margin-top:6px}
+    .badge{
+      font-weight:700; font-size:12px; color:#1d4ed8;
+      background:#dbeafe; padding:6px 10px; border-radius:999px; border:1px solid #bfdbfe;
+      white-space:nowrap;
+    }
+
+    /* ---------- Bottom Nav ---------- */
+    .nav{
+      position:sticky; bottom:0; z-index:20; background:rgba(255,255,255,0.9);
+      backdrop-filter: blur(10px);
+      border-top:1px solid rgba(2,6,23,0.08);
+    }
+    .navwrap{ max-width:960px; margin:0 auto; display:grid; grid-template-columns:repeat(4,1fr); }
+    .navbtn{
+      padding:10px 4px; text-align:center; color:var(--muted);
+      border:none; background:transparent; font-size:12px; cursor:pointer;
+      text-decoration:none;
+    }
+    .navbtn.active{ color:var(--primary); font-weight:700 }
+    .navbtn svg{ display:block; margin:0 auto 4px auto; width:22px; height:22px }
+
+    /* Scrollbar nice-ness (optional) */
+    .list::-webkit-scrollbar{ height:10px; width:10px }
+    .list::-webkit-scrollbar-thumb{ background:#cbd5e1; border-radius:999px }
   </style>
 </head>
 <body>
-  <div class="login-box">
-    <h2>Login to Continue</h2>
-    <input type="text" placeholder="Email" id="email" />
-    <input type="password" placeholder="Password" id="password" />
-    <button onclick="login()">Login</button>
-    <p>Don't have an account? <a href="#" onclick="alert('Signup form coming soon')">Sign up</a></p>
+  <div class="app">
+    <!-- Top search -->
+    <header class="topbar">
+      <div class="topwrap">
+        <div class="search" role="search">
+          <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none">
+            <circle cx="11" cy="11" r="7" stroke="#334155" stroke-width="2"></circle>
+            <path d="M20 20L17 17" stroke="#334155" stroke-width="2" stroke-linecap="round"></path>
+          </svg>
+          <input id="searchInput" type="text" placeholder="Search colleges…" aria-label="Search colleges" />
+        </div>
+        <span class="chip" id="countChip">0 results</span>
+      </div>
+    </header>
+
+    <!-- List -->
+    <main class="list" id="list"></main>
+
+    <!-- Bottom nav -->
+    <nav class="nav" aria-label="Bottom navigation">
+      <div class="navwrap">
+        <a href="index.html" class="navbtn active">🏫 Colleges</a>
+        <a href="courses.html" class="navbtn">📘 Courses</a>
+        <a href="guidance.html" class="navbtn">🧭 Guidance</a>
+        <a href="profile.html" class="navbtn">👤 Profile</a>
+      </div>
+    </nav>
   </div>
 
   <script>
-    function login() {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      if (email && password) {
-        alert("Login successful. Redirecting to quiz...");
-        window.location.href = "quiz.html";
-      } else {
-        alert("Please enter both fields.");
-      }
+    const COLLEGES = [
+      { id: 1, name: "NIT Surathkal", rank: 1, img: "https://picsum.photos/seed/nit/600/300" },
+      { id: 2, name: "IIT Bombay", rank: 2, img: "https://picsum.photos/seed/iitb/600/300" },
+      { id: 3, name: "BITS Pilani", rank: 3, img: "https://picsum.photos/seed/bits/600/300" },
+      { id: 4, name: "MIT Manipal", rank: 4, img: "https://picsum.photos/seed/mit/600/300" },
+      { id: 5, name: "IISc Bangalore", rank: 5, img: "https://picsum.photos/seed/iisc/600/300" },
+      { id: 6, name: "IIT Madras", rank: 6, img: "https://picsum.photos/seed/iitm/600/300" },
+      { id: 7, name: "VIT Vellore", rank: 7, img: "https://picsum.photos/seed/vit/600/300" },
+      { id: 8, name: "SRM University", rank: 8, img: "https://picsum.photos/seed/srm/600/300" },
+    ];
+
+    const list = document.getElementById("list");
+    const searchInput = document.getElementById("searchInput");
+    const countChip = document.getElementById("countChip");
+
+    function render(items){
+      list.innerHTML = "";
+      items.forEach(c => {
+        const card = document.createElement("a");
+        card.className = "card";
+        card.href = `college.html?id=${c.id}`;
+
+        const img = document.createElement("img");
+        img.src = c.img; img.alt = c.name; img.className = "thumb";
+
+        const body = document.createElement("div");
+        body.className = "content";
+
+        const left = document.createElement("div");
+        left.style.flex = "1";
+        const title = document.createElement("div");
+        title.className = "title";
+        title.textContent = c.name;
+
+        const meta = document.createElement("div");
+        meta.className = "meta-row";
+        meta.innerHTML = `<span>National Ranking</span>`;
+
+        left.appendChild(title);
+        left.appendChild(meta);
+
+        const badge = document.createElement("span");
+        badge.className = "badge";
+        badge.textContent = "Rank " + c.rank;
+
+        body.appendChild(left);
+        body.appendChild(badge);
+
+        card.appendChild(img);
+        card.appendChild(body);
+
+        list.appendChild(card);
+      });
+      countChip.textContent = `${items.length} ${items.length===1?'result':'results'}`;
     }
+
+    function applyFilter(){
+      const q = searchInput.value.trim().toLowerCase();
+      const filtered = COLLEGES.filter(c => c.name.toLowerCase().includes(q));
+      render(filtered);
+    }
+    searchInput.addEventListener("input", applyFilter);
+
+    render(COLLEGES);
   </script>
 </body>
 </html>
